# github-workflow-log-overlay

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
packaging/arch/: PKGBUILD
packaging/linux/: dev.github-overlay.workflow-log.desktop
scripts/: package-linux-portable.sh
src/: App.tsx  logDiff.test.ts  logDiff.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
