[package]
name = "github-workflow-log-overlay"
version = "0.1.0"
description = "Floating GitHub Actions workflow log overlay"
authors = ["github-workflow-log-overlay"]
edition = "2021"
rust-version = "1.77"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

